--- a/src/style.css
+++ b/src/style.css
@@ -1,26 +1,44 @@
-/* <!-- HTML !-->
-<button class="button-53" role="button">Button 53</button>
+*,*::before,*::after{
+    box-sizing: border-box;
+}
+html { 
+    background: url('wp12696379-fantasy-tavern-wallpapers.jpg') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+body{
+    margin: 0;
+    color: bisque;
+}
+img{
+    max-width: 100%;
+}
+
+.home-btn-icon{
+    background: url('wp12696379-fantasy-tavern-wallpapers.jpg') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
 
 
-.button-53 {
-  background-color: #3DD1E7;
+.food-and-drinks-btn, .about-bards-barrel-btn, .pigeon-post-btn {
+  background-color: #654321;
   border: 0 solid #E5E7EB;
   box-sizing: border-box;
-  color: #000000;
-  display: flex;
+  color: bisque;
   font-family: ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
   font-size: 1rem;
   font-weight: 700;
-  justify-content: center;
   line-height: 1.75rem;
-  padding: .75rem 1.65rem;
-  position: relative;
   text-align: center;
   text-decoration: none #000000 solid;
   text-decoration-thickness: auto;
-  width: 100%;
+  margin-bottom: 1em;
   max-width: 460px;
-  position: relative;
   cursor: pointer;
   transform: rotate(-2deg);
   user-select: none;
@@ -28,28 +46,27 @@
   touch-action: manipulation;
 }
 
-.button-53:focus {
+.food-and-drinks-btn:focus, .about-bards-barrel-btn:focus, .pigeon-post-btn:focus{
   outline: 0;
 }
 
-.button-53:after {
+.food-and-drinks-btn:after, .about-bards-barrel-btn:after, .pigeon-post-btn:after {
   content: '';
   position: absolute;
-  border: 1px solid #000000;
+  border: 1px solid #FFF;
   bottom: 4px;
   left: 4px;
   width: calc(100% - 1px);
   height: calc(100% - 1px);
 }
 
-.button-53:hover:after {
+.food-and-drinks-btn:hover:after, .about-bards-barrel-btn:hover:after, .pigeon-post-btn:hover:after {
   bottom: 2px;
   left: 2px;
 }
 
 @media (min-width: 768px) {
-  .button-53 {
-    padding: .75rem 3rem;
-    font-size: 1.25rem;
+  .food-and-drinks-btn, .about-bards-barrel-btn, .pigeon-post-btn {
+    
   }
-} */
+} 
