--- a/src/style.css
+++ b/src/style.css
@@ -8,21 +8,53 @@ html {
     -o-background-size: cover;
     background-size: cover;
   }
+
 body{
     margin: 0;
     color: bisque;
 }
+
 img{
     max-width: 100%;
 }
 
-.home-btn-icon{
-    background: url('wp12696379-fantasy-tavern-wallpapers.jpg') no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+.nav, .container{
+  width: 90%;
+  margin: 0 auto;
 }
+
+.top-nav{
+  margin-top: 1em;
+  display: flex;
+  justify-content: space-between;
+}
+
+.bottom-nav{
+  margin-top: 1em;
+  text-align: center;
+}
+
+.appear{
+  display: none;
+}
+
+@media (min-width:600px){
+  .nav{
+    display: flex;
+    justify-content: space-between;
+  }
+  .open-btn{
+    display: none;
+  }
+  .bottom-nav{
+    display: flex;
+  }
+  .bottom-nav-btn{
+    margin-left: 1em;
+  }
+  
+}
+
 
 
 .food-and-drinks-btn, .about-bards-barrel-btn, .pigeon-post-btn {
@@ -66,7 +98,5 @@ img{
 }
 
 @media (min-width: 768px) {
-  .food-and-drinks-btn, .about-bards-barrel-btn, .pigeon-post-btn {
-    
-  }
+
 } 
